# fastAPi-LLM-paper-RAG-api

./: .dockerignore  .env.example  .gitignore  BANGLA_FLOW.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
app/: __init__.py  config.py  database.py  main.py  redis_client.py
app/models/: __init__.py  _vector_compat.py  chunk.py  document.py  eval_score.py  feedback.py  query.py
app/routers/: analytics.py  documents.py  evals.py  health.py  query.py
app/schemas/: __init__.py  analytics.py  documents.py  query.py
app/services/: chunker.py  cost.py  embedder.py  evaluator.py  generator.py  ingestion.py  pdf_parser.py  qa.py  retriever.py
app/utils/: exceptions.py  logging.py
eval_dataset/: golden.json
tests/: conftest.py  test_chunker.py  test_embedder.py  test_health.py  test_qa.py  test_retriever.py  test_routes.py
